# GiftBTE

./: CMakeLists.txt
includes/TransientBTE/: cuda_kernels.cuh  transient.h  transient_kernels.cuh
includes/utility/: cuda_utility.cuh  utility.h
src/: BTEMain.cpp  CMakeLists.txt
src/Solution/: Solution.cpp
src/StaticBTESynthetic/: StaticBTESynthetic.cpp
src/TransientBTE/: CMakeLists.txt  TransientSolver.cpp  cuda_kernels.cu  transient.cpp  transient_kernels.cu
